--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://github.com/500px/500px-android-blur/raw/master/releases/' }
     }
 }
 
